# py-ed25519-zebra-bindings

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tests.py
.github/workflows/: CI.yml  build.yml  pypi.yml  test.yml  wheel.yml
src/: lib.rs
