[package]
name = "py-ed25519-zebra-bindings"
description = "Python bindings for the ed25519-zebra RUST crate"
authors=["Stichting Polkascan (Polkascan Foundation)"]
version = "1.0.1"
repository = "https://github.com/polkascan/py-ed25519-zebra-bindings"
homepage = "https://github.com/polkascan/py-ed25519-zebra-bindings"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
ed25519-zebra = { version = "3.0.0", default-features = false}
rand = "0.8.5"

[lib]
name = "ed25519_zebra"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]
