[build-system]
requires = ["maturin>=1.7.0,<1.8.0"]
build-backend = "maturin"

[project]
name = "py-ed25519-zebra-bindings"
version = "1.2.0"
description = "Python bindings for the ed25519-zebra RUST crate"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {email = "info@polkascan.org"},
  {name = "Polkascan Foundation"}
]
maintainers = [
  {name = "Polkascan Foundation", email = "info@polkascan.org"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
repository = "https://github.com/polkascan/py-ed25519-zebra-bindings"
homepage = "https://github.com/polkascan/py-ed25519-zebra-bindings"
